Even more sonarcloud improvements. Skip tests and javadoc building for mvn verify